--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How to go beyond thought and sense pure presence</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">25 minutes ago</div>
+                        <div class="date">40 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Moving Beyond Religion to Responsibility | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -860,7 +860,7 @@
                     <div class="video-info">
                         <h3>Fly high puffle 🕊️</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -871,7 +871,7 @@
                     <div class="video-info">
                         <h3>Some unique intimidation tactics here ￼</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -882,7 +882,7 @@
                     <div class="video-info">
                         <h3>Hope they didn’t see that</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -893,7 +893,7 @@
                     <div class="video-info">
                         <h3>I bought all of it</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2609,7 +2609,7 @@
                     <div class="video-info">
                         <h3>Do this setup key for a natural, "un-technical" golf swing.</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 14, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>How to go beyond thought and sense pure presence</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">25 minutes ago</div>
+                            <div class="date">40 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Moving Beyond Religion to Responsibility | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10112,7 +10112,7 @@
                         <div class="video-info">
                             <h3>Do this setup key for a natural, "un-technical" golf swing.</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 14, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10404,7 +10404,7 @@
                         <div class="video-info">
                             <h3>Fly high puffle 🕊️</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10415,7 +10415,7 @@
                         <div class="video-info">
                             <h3>Some unique intimidation tactics here ￼</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10426,7 +10426,7 @@
                         <div class="video-info">
                             <h3>Hope they didn’t see that</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10437,7 +10437,7 @@
                         <div class="video-info">
                             <h3>I bought all of it</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
