--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>No, I'm Not A Human</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">7 minutes ago</div>
+                        <div class="date">24 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -147,7 +147,7 @@
                     <div class="video-info">
                         <h3>How to go beyond thought and sense pure presence</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -246,7 +246,7 @@
                     <div class="video-info">
                         <h3>He Saw A Ghost?!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -862,7 +862,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US SHOCKWAVE MASTERCLASS: EXPLODE PLAYERS OUT OF THE MAP TO WIN</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1049,7 +1049,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Right Now (Live From LA)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1786,7 +1786,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN VS WORLD'S HARDEST QUIZ</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>How to go beyond thought and sense pure presence</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>No, I'm Not A Human</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">7 minutes ago</div>
+                            <div class="date">24 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>He Saw A Ghost?!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10408,7 +10408,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US SHOCKWAVE MASTERCLASS: EXPLODE PLAYERS OUT OF THE MAP TO WIN</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10496,7 +10496,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Right Now (Live From LA)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10727,7 +10727,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN VS WORLD'S HARDEST QUIZ</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
