--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>The greatest gift you can offer another human being | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Arthur is The WORST Wingman..💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Riding Through -14°C to Philadelphia #Sadhguru #EcstasyOfEnlightenment</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>To know the Ecstasy, you just have to give in to Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - From Fighting to Harmony - Changing Your Relationship with Life</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -290,7 +290,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: Renaissance Fair Cringe</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -301,7 +301,7 @@
                     <div class="video-info">
                         <h3>No, I'm Not A Human</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -763,7 +763,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Back Here Again (Live From LA)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1819,7 +1819,7 @@
                     <div class="video-info">
                         <h3>Happy Halloween 🎃👻</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2534,7 +2534,7 @@
                     <div class="video-info">
                         <h3>Can't believe experienced golfers make this huge setup mistake...</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>The greatest gift you can offer another human being | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Riding Through -14°C to Philadelphia #Sadhguru #EcstasyOfEnlightenment</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>To know the Ecstasy, you just have to give in to Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - From Fighting to Harmony - Changing Your Relationship with Life</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9512,7 +9512,7 @@
                         <div class="video-info">
                             <h3>Happy Halloween 🎃👻</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10101,7 +10101,7 @@
                         <div class="video-info">
                             <h3>Can't believe experienced golfers make this huge setup mistake...</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Arthur is The WORST Wingman..💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10261,7 +10261,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: Renaissance Fair Cringe</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10272,7 +10272,7 @@
                         <div class="video-info">
                             <h3>No, I'm Not A Human</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10382,7 +10382,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Back Here Again (Live From LA)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
